# boxtree

./: .gitignore  .gitlab-ci.yml  .pylintrc  .pylintrc-local.yml  .test-conda-env-py3.yml  .test-conda-env-requirements.txt  CITATION.cff  MANIFEST.in  README.rst  azure-pipelines.yml  pyproject.toml  pytest.ini  requirements.txt  setup.cfg  setup.py
.basedpyright/: baseline.json
.github/workflows/: ci.yml
boxtree/: __init__.py  area_query.py  array_context.py  bounding_box.py  constant_one.py  cost.py  dfmm.py  distributed.py  fmm.py  geo_lookup.py  geo_query.py  partition.py  pyfmmlib_integration.py  rotation_classes.py  timing.py  tools.py  translation_classes.py  traversal.py  tree.py  tree_build.py  tree_build_kernels.py  tree_interactive_build.py  tree_of_boxes.py  version.py  visualization.py
boxtree/distributed/: __init__.py  calculation.py  default_perf_model.json  local_traversal.py  local_tree.py  partition.py  perf_model.py  util.py
doc/: Makefile  conf.py  cost.rst  distributed.rst  fmm.rst  index.rst  intro.rst  linf-l2.tikz  lookup.rst  make-images.sh  misc.rst  reference.rst  tikz2png  tools.rst  traversal.rst  tree-build.rst  tree.rst  upload-docs.sh
examples/: cost_model.py  demo.py  demo_perf_model.py  interactive_boxtree_demo.py  performance_model.py
htree/: __init__.py  fmm.py  traversal.py
test/: fmmlib-timing.py  test_compress.py  test_constantone.py  test_cost_model.py  test_dfmm.py  test_distributed.py  test_distributed_scaling.py  test_distributed_tools.py  test_fmm.py  test_performance_model.py  test_tools.py  test_traversal.py  test_tree.py  test_tree_of_boxes.py  testlib.py
